# ember

./: .cvsignore  .editorconfig  .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  CodeGen.pl  Ember.kdevelop  Ember.nsi  INSTALL  INSTALL.lyx  Makefile.am  NEWS  README  README.lyx  README.md  TODO  Visual C++ 6.0.txt  acinclude.m4  autogen.sh  conanfile.py  conanfile.txt  configfile  configure.ac  configure.in  dime.dox  dime.dox.in  dime.dsp  dime.dsw  dime.spec.in  ember  ember-media.spec.in  ember.bat  ember.cbp  ember.conf  ember.conf.in  ember.desktop  ember.dox.in  (+10 more)
data/: Makefile.am  modeldefinition.xsd
data/caelum/: Base.program  CaelumBase.frag  CaelumBase.vert  CaelumLayeredClouds.frag  CaelumLayeredClouds.vert  CaelumPhaseMoon.frag  CaelumPointStarfield.frag  CaelumPointStarfield.vert  CaelumSkyDome.frag  CaelumSkyDome.vert  LayeredClouds.material  PointStarfield.material  SkyDome.material  Starfield.material  Sun.material  moon.material  sphere.mesh
data/dural/: acorn.modeldef  amanita.modeldef  anvil.modeldef  apple.modeldef  armory.modeldef  ash_shovel.modeldef  axe_pick.modeldef  bass_lm.modeldef  bear.modeldef  beet.modeldef  birch_b.modeldef  blacksmith.modeldef  blacksmith_anvil.modeldef  bluegill.modeldef  boat.modeldef  bone_pile.modeldef  bowl_clay.modeldef  bread_loaf.modeldef  bread_loaf_cut.modeldef  bucksaw.modeldef  bush.modeldef  butcher_house.modeldef  camelia.modeldef  campfire.modeldef  carrot.modeldef  cart_a.modeldef  cart_b.modeldef  cart_c.modeldef  cart_d.modeldef  cg_house_a.modeldef  cg_house_b.modeldef  cg_house_c.modeldef  cg_house_d.modeldef  cg_house_ruin.modeldef  cg_inn.modeldef  cg_pedestal.modeldef  cg_statue.modeldef  cg_tower.modeldef  cg_wall_run.modeldef  charcoal_pile.modeldef  (+129 more)
data/entityrecipes/: barrel.entityrecipe  birch.entityrecipe  boulder.entityrecipe  boulder_loose.entityrecipe  crates.entityrecipe  demo_thing.entityrecipe  farmanimals.entityrecipe  feature.entityrecipe  felsite.entityrecipe  fir.entityrecipe  fishingrod.entityrecipe  food.entityrecipe  gallows.entityrecipe  oak.entityrecipe  pine.entityrecipe  shovel.entityrecipe  shrub.entityrecipe  sieve.entityrecipe  signpost.entityrecipe  stone_palisade.entityrecipe  tombstone.entityrecipe  torch.entityrecipe  vegetables.entityrecipe
data/ui/ember/: Compass.frag  Compass.program  Compass.vert  ui.material
src/: .cvsignore  CMakeLists.txt  Makefile.am  OgreSmallVector.cpp  mscprag.h
src/bindings/lua/: CMakeLists.txt  ConnectorDefinitions.cpp  ConnectorDefinitions.h  ConnectorDefinitions.pkg  Makefile.am  TypeResolving.cpp  TypeResolving.h
src/components/: CMakeLists.txt  Component.h  ComponentFactory.h  Makefile.am  State.h  WidgetInfo.h
src/components/assets/: AssetsUpdater.cpp  AssetsUpdater.h  AssetsUpdaterResult.h  CMakeLists.txt
src/components/carpenter/: BluePrint.cpp  BluePrint.h  Carpenter.h  Makefile.am
src/components/cegui/: CEGUIGUILayout_xmlHandler.cpp  CEGUIGUILayout_xmlHandler.h  CEGUILogger.cpp  CEGUILogger.h  CEGUISetup.cpp  CEGUISetup.h  CMakeLists.txt  ColouredRenderedStringParser.cpp  ColouredRenderedStringParser.h  LayoutLoader.cpp  LayoutLoader.h  Makefile.am  RenderedColourStringTextComponent.cpp  RenderedColourStringTextComponent.h  SDLNativeClipboardProvider.cpp  SDLNativeClipboardProvider.h  ScrapNativeClipboardProvider.cpp  ScrapNativeClipboardProvider.h
src/components/cs/: CSComponent.cpp  CSComponent.h  (+2 more)
src/domain/: CMakeLists.txt  EmberEntity.cpp  EmberEntity.h  EmberEntityRef.cpp  EmberEntityRef.h  EntityTalk.cpp  EntityTalk.h  IEntityAttachment.h  IEntityControlDelegate.h  IEntityVisitor.h  IGraphicalRepresentation.h  IHeightProvider.h  IVisualizable.h  Makefile.am  Types.h
src/extensions/: .cvsignore  Makefile.am
src/framework/: .cvsignore  AtlasFileLoader.cpp  AtlasFileLoader.h  AtlasMessageLoader.cpp  AtlasMessageLoader.h  AtlasObjectDecoder.cpp  AtlasObjectDecoder.h  AtlasPresentationBridge.cpp  AtlasPresentationBridge.h  AtlasQuery.cpp  AtlasQuery.h  AttributeObserver.cpp  AttributeObserver.h  AutoCloseConnection.h  BaseException.h  CMakeLists.txt  CommandHistory.cpp  CommandHistory.h  Component.h  ComponentFactory.h  ConsoleBackend.cpp  ConsoleBackend.h  ConsoleCommandWrapper.cpp  ConsoleCommandWrapper.h  ConsoleObject.h  DeepAttributeObserver.cpp  DeepAttributeObserver.h  DirectAttributeObserver.cpp  DirectAttributeObserver.h  EntityExporter.cpp  EntityExporter.h  EntityExporterBase.cpp  EntityExporterBase.h  EntityImporter.cpp  EntityImporter.h  EntityImporterBase.cpp  EntityImporterBase.h  EntityListener.cpp  EntityListener.h  Exception.cpp  (+64 more)
src/main/: .cvsignore  Application.cpp  Application.h  CMakeLists.txt  ConfigBoundLogObserver.cpp  ConfigBoundLogObserver.h  ConsoleInputBinder.cpp  ConsoleInputBinder.h  DimeServices.cpp  DimeServices.h  Ember.cpp  LogObserver.cpp  LogObserver.h  MainWrapper.h  Makefile  Makefile.am  SnapToMovement.h  StateManager.cpp  StateManager.h  application.cpp  application.h  dime.cpp  states.xml
src/platform/: Makefile.am  platform_windows.h
src/services/: .cvsignore  AbstractService.h  CMakeLists.txt  EmberServices.cpp  EmberServices.h  LoggingService.cpp  LoggingService.h  Makefile  Makefile.am  Service.h  ServiceManager.cpp  ServiceManager.h  ServiceTest.cpp
src/sol/: config.hpp
test/: ConvertTestCase.cpp  DataModelTest.cpp  DataModelTest.h  InputServiceTest.cpp  InputServiceTest.h  Makefile.am  ModelMountTestCase.cpp  ModelMountTestCase.h  StateManagerTest.cpp  StateManagerTest.h  TestFramework.cpp  TestOgreView.cpp  TestServices.cpp  TestServices.h  TestSuite.cpp  TestTasks.cpp  TestTerrain.cpp  nulltest.sh
testSBInt/: CMakeLists.txt  resources.cfg
testSBInt/src/: App.cpp  App.h  Behaviors.cpp  Behaviors.h  Bonhomme.cpp  Bonhomme.h  Entity.cpp  Entity.h  Input.cpp  Input.h  LocomotionBehav.cpp  LocomotionBehav.h  Retarget.cpp  Retarget.h  Sb.cpp  Sb.h  main.cpp
tests/: CMakeLists.txt  ConvertTestCase.cpp  ConvertTestCase.h  Makefile.am  ModelMountTestCase.cpp  TestFramework.cpp  TestTasks.cpp  TestTerrain.cpp  TestTimeFrame.cpp  atlas.xml
(+4176 files in other folders)
